# juliankrieger-dev-v4

./: Cargo.toml  build.rs
blog/: combining-docker-buildkit-cargo-chef.md  cysec-rumble-robert.md  cysec-rumble-serial-wasm.md  developing-amateurish-linux-rootkit.md  reverse-engineering-one-of-its-kind-gamecheat.md  stack-one.md  stack-zero.md
src/: assets.rs  handlers.rs  main.rs  posts.rs  state.rs
src/handlers/: blog.rs  freelancing.rs  index.rs  publications.rs
src/posts/: frontmatter.rs
templates/: base.rs.html  freelancing.rs.html  index.rs.html  layout.rs.html  publications.rs.html
